7131302: connode.cpp:205 Error: ShouldNotReachHere()

Add Value() methods to short and byte Load nodes to truncate constants which does not fit.

Reviewed-by: jrose